# face-eye-tracking-system

./: .gitignore  .gitpod.yml  Backpropogation using iris dataset.ipynb  Global_superstore.py  LICENSE  README.md  README_Dashboard.md  SVM_XGBoost_TensorFlow_Attrition.py  Video_monitoring_app.py  __init__.py  camera_permission_component.html  check_environment.py  check_gpu_tensorflow.py  deployment_test.py  fix_tensorflow_gpu.py  global_superstore_dashboard.py  order_priority_extreme_accuracy.py  order_priority_extreme_optimization.py  order_priority_neural_network.py  order_priority_neural_network_advanced.py  order_priority_neural_network_cpu_optimized.py  order_priority_neural_network_extreme.py  packages.txt  pyproject.toml  requirements.txt  run.sh  startup_check.py  streamlit_app.py  test_camera.py
.devcontainer/: devcontainer.json
keras_tuner_extreme/attrition_yes_optimization/: oracle.json
keras_tuner_extreme/attrition_yes_optimization/trial_00/: trial.json
keras_tuner_extreme/attrition_yes_optimization/trial_01/: trial.json
keras_tuner_extreme/attrition_yes_optimization/trial_02/: trial.json
keras_tuner_extreme/attrition_yes_optimization/trial_03/: trial.json
keras_tuner_extreme/attrition_yes_optimization/trial_04/: trial.json
keras_tuner_extreme/attrition_yes_optimization/trial_05/: trial.json
keras_tuner_extreme/attrition_yes_optimization/trial_06/: trial.json
keras_tuner_extreme/attrition_yes_optimization/trial_07/: trial.json
keras_tuner_extreme/attrition_yes_optimization/trial_08/: trial.json
nn_tuning/order_priority/: oracle.json
(+17 files in other folders)
