[tool.poetry]
name = "face-eye-tracking-system"
version = "1.0.0"
description = "Real-time face and eye tracking application"
authors = ["Your Name"]
python = ">=3.11,<3.12"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.45.1"
opencv-python = "4.10.0.84"
mediapipe = "0.10.18"
numpy = "1.24.4"
pandas = "2.0.3"
plotly = "5.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 